--- a/catalog/templates/includes/inc_main_menu.html
+++ b/catalog/templates/includes/inc_main_menu.html
@@ -13,5 +13,11 @@
     <a class="p-2 text-dark" href="{% url 'blog:blog'%}">Блог</a>
     <a class="p-2 text-dark" href="/contacts/">Контакты</a>
   </nav>
-  <a class="btn btn-outline-primary" href="#">Войти/Зарегистрироваться</a>
+  {% if user.is_authenticated %}
+    <a class="btn btn-outline-primary" href="{% url 'users:profile'%}">Профиль</a>
+    <a class="btn btn-outline-primary" href="{% url 'users:logout'%}">Выйти</a>
+  {% else %}
+    <a class="btn btn-outline-primary" href="{% url 'users:login'%}">Войти</a>
+    <a class="btn btn-outline-primary" href="{% url 'users:register'%}">Зарегистрироваться</a>
+  {% endif %}
 </div>
